--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "svg-cleanup",
   "version": "1.0.0",
-  "description": "",
+  "description": "implementation of svg cleanup workflow",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
+  "author": "Josh Lipps",
+  "license": "MIT",
+  "devDependencies": {},
+  "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-grunticon": "^2.1.2",
-    "grunt-svgmin": "^2.0.1"
-  }
+    "grunt-svgmin": "^2.0.1",
+    "grunt-grunticon": "^2.2.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JoshLipps/svg-cleanup.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JoshLipps/svg-cleanup/issues"
+  },
+  "homepage": "https://github.com/JoshLipps/svg-cleanup#readme"
 }
